--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="profile">Profile</string>
+    <string name="category">Category</string>
+    <string name="offer">Offers</string>
+    <string name="new_product">New Product</string>
+    <string name="order">My Order</string>
+    <string name="cart">My Cart</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
